# lite-lime-conan

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt  meson.build
cmake/: FindFreeType2.cmake  FindLua.cmake  FindPCRE.cmake  FindSDL2.cmake
data/colors/: sublime-mariana.lua
data/core/: common.lua  init.lua  keymap.lua  rootview.lua  start.lua  statusview.lua  style.lua  tokenizer.lua
data/core/commands/: doc.lua
data/plugins/: autocomplete.lua  autoreload.lua  contextmenu.lua  detectindent.lua  drawwhitespace.lua  language_c.lua  language_cpp.lua  language_css.lua  language_html.lua  language_js.lua  language_lua.lua  language_md.lua  language_python.lua  language_xml.lua  lineguide.lua  macro.lua  projectsearch.lua  quote.lua  reflow.lua  scale.lua  tabularize.lua  toolbarview.lua  treeview.lua  trimwhitespace.lua  workspace.lua
resources/: lite_lime_plugin_api.h
resources/icons/: icon.inl
resources/linux/: org.lite_lime.lite_lime.appdata.xml  org.lite_lime.lite_lime.desktop
src/: CMakeLists.txt  app.c  app.h  flag.c  flag.h  main.c  meson.build
src/api/: system.c
